Fix compilation on Java 11